--- a/build.gradle
+++ b/build.gradle
@@ -58,59 +58,15 @@ ext {
     msEWSApiVersion = '2.0'
 }
 
-springBoot {
-    buildInfo()
-}
-
-dependencyManagement {
-	applyMavenExclusions = false
-	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-zookeeper-dependencies:1.0.3.RELEASE'
-	}
-}
-
-bootRepackage  {
-    classifier = 'exec'
-}
-
 dependencies {
-	//spring-boot
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: springBootVersion
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-hateoas', version: springBootVersion
-
-	//spring-cloud
-	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zookeeper-discovery', version: springCloudVersion
-	compile group: 'io.reactivex', name: 'rxjava', version: '1.2.5'//dep above wants it
-	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zookeeper-config', version: springCloudVersion
-
-	//zk
-	compile group: 'org.springframework.cloud', name: 'spring-cloud-zookeeper-discovery'
-
-	//redis
-    compile group: 'org.springframework.data', name: 'spring-data-redis', version: '1.8.0.RELEASE'
-    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
-	compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.4.2'
-
-	//kafka
-	compile group: 'org.springframework.kafka', name: 'spring-kafka', version: '1.3.5.RELEASE'
-
-	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.6.0'
-
-	//ews api
+    //ews api
     compile group: 'com.microsoft.ews-java-api', name: 'ews-java-api', version: msEWSApiVersion
-
-	//misc
-	compile group: 'io.dropwizard.metrics', name: 'metrics-core'
-    compile('org.jolokia:jolokia-core')
 
 	//tt
 	compile group: 'com.timetrade.platform.commons', name: 'timetrade-api-creds', version: '1.1.9'
-	compile group: 'com.timetrade.platform.eapi', name: 'eapi-springws-client', version: '1.0.3'
-	compile group: 'com.timetrade', name: 'helium-commons', version: '0.2.1'
 
     //test
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 	testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.2'
 	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
     testCompile group: 'io.rest-assured', name: 'spring-mock-mvc', version: '3.0.2'
@@ -121,9 +77,4 @@ dependencies {
 
 test {
     useTestNG()
-}
-
-configurations {
-    compile.exclude module: 'log4j'
-    testCompile.exclude module: 'assertj'
 }
