--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ apply plugin: 'maven'
 
 group 'com.timetrade'
 version '1.0-SNAPSHOT'
+defaultTasks 'clean', 'test'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -16,7 +17,13 @@ ext {
     msEWSApiVersion = '2.0'
 }
 
+configurations {
+    agent
+}
+
 dependencies {
+    agent "org.aspectj:aspectjweaver:${aspectjVersion}"
+
     //ews api
     compile group: 'com.microsoft.ews-java-api', name: 'ews-java-api', version: msEWSApiVersion
 
@@ -27,6 +34,10 @@ dependencies {
     testCompile group: 'io.rest-assured', name: 'spring-mock-mvc', version: '3.0.2'
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
     testCompile "ru.yandex.qatools.allure:allure-testng-adaptor:${allureVersion}"
+}
+
+test.doFirst {
+    jvmArgs "-javaagent:${configurations.agent.singleFile}"
 }
 
 test {
